--- a/package.json
+++ b/package.json
@@ -8,25 +8,37 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "ts-node test/test.ts",
-    "lint": "eslint '*/**/*.ts' --quiet --fix",
-    "pretest": "npm run build"
+    "test": "jest",
+    "lint": "eslint '*/**/*.ts' --quiet --fix"
   },
   "author": "Adam Bachman <adam.bachman@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-typescript": "^8.1.1",
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
+    "jest-websocket-mock": "^2.2.0",
+    "mock-socket": "^9.0.3",
     "prettier": "^2.2.1",
     "rollup": "^2.38.2",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "cuid": "^2.1.8",
+    "faye": "^1.4.0",
+    "reconnecting-websocket": "^4.4.0"
   }
 }
