--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "webrtc-mesh",
   "version": "1.0.0",
   "description": "A simple-peer based WebRTC mesh client for browsers.",
-  "main": "dist/webrtc-mesh.cjs.js",
-  "browser": "dist/webrtc-mesh.umd.js",
-  "module": "dist/webrtc-mesh.esm.js",
+  "main": "src/index.ts",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "start": "webpack && cp dist/* examples/",
     "test": "jest",
     "lint": "eslint '*/**/*.ts' --quiet --fix"
   },
@@ -17,10 +14,9 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.1",
-    "@rollup/plugin-typescript": "^8.1.1",
+    "@types/debug": "^4.1.5",
     "@types/jest": "^26.0.20",
+    "@types/simple-peer": "^9.6.1",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "babel-jest": "^26.6.3",
@@ -31,14 +27,17 @@
     "jest-websocket-mock": "^2.2.0",
     "mock-socket": "^9.0.3",
     "prettier": "^2.2.1",
-    "rollup": "^2.38.2",
+    "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "webpack": "^5.19.0",
+    "webpack-cli": "^4.4.0"
   },
   "dependencies": {
     "cuid": "^2.1.8",
+    "debug": "^4.3.1",
     "faye": "^1.4.0",
-    "reconnecting-websocket": "^4.4.0"
+    "reconnecting-websocket": "^4.4.0",
+    "simple-peer": "^9.9.3"
   }
 }
