--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple-peer based WebRTC mesh client for browsers.",
   "main": "src/index.ts",
   "scripts": {
-    "start": "webpack && cp dist/* examples/",
+    "start": "webpack -w",
     "test": "jest",
     "lint": "eslint '*/**/*.ts' --quiet --fix"
   },
@@ -16,6 +16,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@types/debug": "^4.1.5",
     "@types/jest": "^26.0.20",
+    "@types/once": "^1.4.0",
     "@types/simple-peer": "^9.6.1",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
@@ -27,6 +28,7 @@
     "jest-websocket-mock": "^2.2.0",
     "mock-socket": "^9.0.3",
     "prettier": "^2.2.1",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
@@ -37,6 +39,8 @@
     "cuid": "^2.1.8",
     "debug": "^4.3.1",
     "faye": "^1.4.0",
+    "once": "^1.4.0",
+    "process": "^0.11.10",
     "reconnecting-websocket": "^4.4.0",
     "simple-peer": "^9.9.3"
   }
