--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "webrtc-mesh",
   "version": "1.0.0",
   "description": "A simple-peer based WebRTC mesh client for browsers.",
-  "main": "src/index.ts",
+  "main": "dist/webrtc-mesh.js",
   "scripts": {
     "start": "webpack -w",
+    "build": "npm run lint && webpack --config webpack.production.js",
     "test": "jest",
     "lint": "eslint '*/**/*.ts' --quiet --fix"
   },
@@ -25,10 +26,7 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
-    "jest-websocket-mock": "^2.2.0",
-    "mock-socket": "^9.0.3",
     "prettier": "^2.2.1",
-    "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
@@ -41,7 +39,6 @@
     "faye": "^1.4.0",
     "once": "^1.4.0",
     "process": "^0.11.10",
-    "reconnecting-websocket": "^4.4.0",
     "simple-peer": "^9.9.3"
   }
 }
