--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,14 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "module": "commonjs",
-    "target": "es5",
-    "allowJs": true /* Allow javascript files to be compiled. */,
-    "strict": true /* Enable all strict type-checking options. */,
-    "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
-    "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-  }
+    "lib": ["es2017", "es7", "es6"],
+    "target": "es6",
+    "allowJs": false,
+    "strict": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "declaration": true
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "test"]
 }
