--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack -w",
     "build": "npm run lint && webpack --config webpack.production.js",
+    "server": "node bin/server.js",
     "test": "jest",
     "lint": "eslint '*/**/*.ts' --quiet --fix"
   },
